# nowdock-panel

./: CMakeLists.txt  README.md  defaultLayout.metadata.desktop.template  emptyLayout.metadata.desktop.template  install-global.sh  install-local.sh  metadata.desktop  metadata.desktop.template  nowdockpanel.metadata.desktop.template  uninstall-local.sh
containment/contents/ui/: VisibilityManager.qml  main.qml
contents/code/: LayoutManager.js
contents/config/: main.xml
contents/ui/: AddWidgetVisual.qml  AppletItem.qml  ConfigOverlay.qml  NowDockConfiguration.qml  PanelBox.qml  main.qml
corona/: CMakeLists.txt  abstractinterface.cpp  abstractinterface.h  install-global.sh  main.cpp  nowdockconfigview.cpp  nowdockcorona.cpp  nowdockview.cpp  nowdockview.h  visibilitymanager.cpp  visibilitymanager.h  xwindowinterface.h
corona/nowdockshell/: metadata.desktop
corona/nowdockshell/contents/configuration/: NowDockConfiguration.qml
corona/nowdockshell/contents/views/: Panel.qml
corona/packageplugins/shell/: nowdockpackage.cpp  nowdockpackage.h
corona/windowed-codebase/: nowdockcorona.h  nowdockview.h
layout-templates/: CMakeLists.txt
layout-templates/org.kde.store.nowdock.defaultPanel/: CMakeLists.txt  metadata.desktop  metadata.desktop.cmake
layout-templates/org.kde.store.nowdock.defaultPanel/contents/: layout.js
layout-templates/org.kde.store.nowdock.emptyPanel/: metadata.desktop  metadata.desktop.cmake
layout-templates/org.kde.store.nowdock.emptyPanel/contents/: layout.js
libnowdock/: CMakeLists.txt  abstractinterface.cpp  abstractinterface.h  nowdockplugin.cpp  nowdockplugin.h  panelwindow.cpp  panelwindow.h  qmldir  types.h  windowsystem.cpp  windowsystem.h  xwindowinterface.cpp  xwindowinterface.h
nowdockpanel/: CMakeLists.txt  metadata.desktop  metadata.desktop.cmake
nowdockpanel/contents/config/: main.xml
nowdockpanel/contents/ui/: AppletItem.qml  MagicWindow.qml  NowDockConfiguration.qml  NowDockConfiguration.qml.cmake  PanelBox.qml  main.qml
nowdockplasmoid/contents/ui/: main.qml
po/: Messages.sh  el.po  pl.po  plasma_applet_org.kde.store.nowdock.panel.pot  ro.po  ro_RO.po  update-metadata.sh  zh_TW.po
po/containment/: el.po  pl.po  plasma_applet_org.kde.nowdock.containment.pot  ro.po  zh_TW.po
po/nowdockpanel/: el.po  pl.po  plasma_applet_org.kde.store.nowdock.panel.pot  ro.po  zh_TW.po
po/nowdockplasmoid/: el.po  pl.po  plasma_applet_org.kde.store.nowdock.plasmoid.pot  zh_TW.po
shell/contents/configuration/: NowDockConfiguration.qml
shell/contents/views/: Panel.qml
